fixed font-size on tablet resolutions

--- a/style.css
+++ b/style.css
@@ -214,9 +214,18 @@ body * {
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
+
+	.main__texts-title {
+		font-size: 25px;
+	}
+
+	.main__texts-paragraph {
+		font-size: 14px;
+	}
 	
 	.main__button {
 		width: 100%;
+		font-size: 16px;
 	}
 
 	.main__disclaimer * {
